# web-mandelbrot

./: Cargo.toml  LICENSE  README.md  index.html
pkg/: package.json  web_mandelbrot.d.ts  web_mandelbrot.js  web_mandelbrot_bg.wasm  web_mandelbrot_bg.wasm.d.ts
src/: camera.rs  lib.rs  main.rs
src/shaders/: shader.wgsl
