[package]
name = "web_mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
winit = "0.28.6"
env_logger = "0.10"
log = "0.4.18"
wgpu = "0.16.1"
pollster = "0.3.0"
bytemuck = { version = "1.13.1", features = [ "derive" ] }
anyhow = "1.0.71"
cgmath = "0.18"
tobj = { version = "4.0.0", features = ["async"]}
instant = "0.1.12"
rand = "0.8.5"
rand_distr = "0.4.3"

[dependencies.image]
version = "0.24.6"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0.71"
fs_extra = "1.3"
glob = "0.3.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
wgpu = { version = "0.16.1", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
    "CssStyleDeclaration",
    "HtmlElement",
]}
reqwest = { version = "0.11.18" }
getrandom = { version = "0.2.9", features = ["js"] }
